[package]
edition = "2021"
name = "keyball-embassy-rp2040"
version = "0.1.0"
authors = ["nazo6 <git@nazo6.dev>"]
resolver = "2"

[dependencies]
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
  "defmt",
] }
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", features = [
  "task-arena-size-32768",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
  "defmt",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

usbd-hid = "0.7.0"
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
heapless = "0.8.0"
embassy-sync = "0.5.0"
pio-proc = "0.2.2"
pio = "0.2.1"
smart-leds = "0.4.0"
rkyv = { version = "0.7.44", default-features = false, features = [
  "size_32",
  "bytecheck",
] }

[features]
default = ["rp2040"]
rp2040 = []

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true
debug = false
panic = "abort"
