cargo-features = ["profile-rustflags"]

[workspace]
members = [
  "keyball-common",
  "keyball61/keyball61-nrf52840",
  "keyball61/keyball61-rp2040", "ra-check",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["nazo6"]
description = "Rktk keyball implemention"
license = "MIT"
edition = "2021"
repository = "https://github.com/nazo6/keyball-rs"

[workspace.dependencies]
keyball-common = { path = "keyball-common" }

rktk = { path = "../rktk/lib/rktk" }
rktk-drivers-common = { path = "../rktk/lib/rktk-drivers-common" }
rktk-drivers-nrf = { path = "../rktk/lib/rktk-drivers-nrf" }
rktk-drivers-rp = { path = "../rktk/lib/rktk-drivers-rp" }

embassy-executor = { version = "0.6.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "integrated-timers",
  "task-arena-size-65536",
  # "nightly",
] }
embassy-time = { version = "0.3.2" }
embassy-sync = { version = "0.6.0" }
embedded-alloc = "0.6.0"

embassy-rp = { version = "0.2.0", features = [
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
] }

embassy-nrf = { version = "0.2.0", features = [
  "gpiote",
  "time-driver-rtc1",
  "nrf52840",
  "nfc-pins-as-gpio",
  "unstable-pac",
] }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", features = [
  "ble-peripheral",
  "ble-central",
  "critical-section-impl",
  "s140",
  "nrf52840",
] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.3" }

ssd1306 = { version = "0.9.0" }

once_cell = { version = "1.20.2", default-features = false, features = [
  "atomic-polyfill",
] }
